# personal-search

./: .env  .env_example  .gitignore  README.md  analise_versículo.ipynb  context-search.ipynb  crew-ai-book-search-local.ipynb  crew-ai-book-search-test.ipynb  crew-ai-book-search.ipynb  crew-ai-book_search.ipynb  crew-ai-pregacao-2.ipynb  crew-ai.ipynb  kickoff.ipynb  multi-query.ipynb  personal-search-02.ipynb  personal-search-03.ipynb  personal-search.ipynb  pyproject.toml  streamlit.py  todo.md
archived/: books-chroma.ipynb  crew-ai-book-search-test.ipynb  crew-ai-book-search.ipynb  crew-ai-pregacao-2.ipynb  crew-ai-pregacao.ipynb  langgraph.ipynb  multi-query.ipynb  personal-search-03.ipynb  personal-search.ipynb  pt.json  teste youtube.ipynb
archived/model/: dolphin.modelfile
books/636d552d-a839-4b61-b0cd-523bda0686fb/: index_metadata.pickle
example/: personal-search-01.ipynb
examples/: README.md  langchain_youtube_neo4j.ipynb  langchain_youtube_summarize.ipynb  teste_books.ipynb  teste_youtube.ipynb  youtube_video.ipynb
ingestion/: books-chroma.ipynb  books-faiss.ipynb  books.ipynb  books.py  books.yaml  utils.py  youtube.py  youtube.yaml  youtube_channel.py  youtube_channel.yaml  youtube_video.py  youtube_video.yaml
personal-search/: README.md  pyproject.toml
personal-search/app/: server.py
personal_search/: README.md  pyproject.toml  training_data.pkl
search/context/: crew.py  crew_chat.py  prompt.ipynb  utils.py
src/personal_search/: crew.py  main.py
vector-store/: chroma.sqlite3
vector-store/books/: index.faiss  index.pkl
(+20 files in other folders)
