[tool.poetry]
name = "personal_search"
version = "0.1.2"
description = "personal-search using crewAI"
authors = ["Cristian C Dos Santos <perestra.ccds@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "*" }
langchain_openai = "*"
langchain_huggingface = "*"
ollama = "*"
youtube-transcript-api = "*"
neo4j = "*"


[tool.poetry.scripts]
personal_search = "personal_search.main:run"
train = "personal_search.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
